# nest-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL
cmake/: ConfigureSummary.cmake  ProcessOptions.cmake
extras/: nest-config.in  nest_vars.sh.in  travis_build.sh
nest/: CMakeLists.txt  neststartup.cpp  neststartup.h
precise/: iaf_psc_alpha_canon_lossless.cpp  iaf_psc_alpha_canon_lossless.h
pynest/: CMakeLists.txt  MANIFEST.in  setup.py
pynest/nest/: __init__.py  pynestkernel.h  pynestkernel.pxd  pynestkernel.pyx
pynest/nest/tests/: test_connect_all_patterns.py  test_refractory.py
testsuite/: do_tests.sh.in
topology/: CMakeLists.txt
